[package]
name = "codesim"
version = "0.1.0"
edition = "2018"

authors = ["XLor yjl9903@vip.qq.com"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
structopt = { version = "0.3", default-features = false }
clang = { version = "1.0.3", features = ["clang_10_0"] }
