[package]
name = "codesim"
version = "0.1.0"
edition = "2018"

authors = ["XLor yjl9903@vip.qq.com"]
license = "MIT"
readme = "README.md"

description = "Diff two single C++ code file."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
lazy_static = "1.4.0"
regex = "1"
tempfile = "3.2.0"
