[package]
name = "codesim"
version = "0.1.2"
edition = "2018"

authors = ["XLor yjl9903@vip.qq.com"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/yjl9903/Codesim"
repository = "https://github.com/yjl9903/Codesim"
keywords = ["plagiarism"]
categories = ["command-line-utilities"]

description = "Diff two single C++ code file."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
lazy_static = "1.4.0"
regex = "1"
tempfile = "3.2.0"
